<resources>
    <string name="app_name">Delicious Dish</string>
    <string name="empty"></string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="skip">Skip</string>
    <string name="content_description_pancakes">Pancakes Background</string>
    <string name="content_description_google">Google Log In</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_have_an_account_log_in">Already have an account?  Log in</string>
    <string name="instructions">Instructions</string>
    <string name="country">Country</string>
    <string name="name_of_meal">Name of Meal</string>
    <string name="welcome_login">Welcome back! You are just a step away from a delicious dish :)</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ingredient_img">https://www.themealdb.com/images/ingredients/%s-Small.png</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>

</resources>