<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_details_food"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/start_background"
            android:contentDescription="@string/content_description_pancakes" />
        <View
            android:id="@+id/black_background"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/black_transparent_background"
            app:layout_constraintEnd_toEndOf="@id/iv_details_food"
            app:layout_constraintTop_toTopOf="@id/iv_details_food" />

        <CheckBox
            android:id="@+id/btn_remove_from_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/sl_favourite_48dp"

            android:layout_marginTop="2dp"
            app:buttonTint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/black_background"
            app:layout_constraintEnd_toEndOf="@+id/black_background"
            app:layout_constraintStart_toStartOf="@+id/black_background"
            app:layout_constraintTop_toTopOf="@+id/black_background" />


        <TextView
            android:id="@+id/tv_details_name_of_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/name_of_meal"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/iv_details_food"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_details_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:text="@string/country"
            android:textSize="24sp"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/tv_details_name_of_meal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_details_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/instructions"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/rv_ingredients"
            app:layout_constraintTop_toBottomOf="@+id/tv_details_instructions" />


        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:autoPlay="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_ingredients" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:drawableStart="@drawable/ic_calender"
            android:text=" Add to calender"

            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_details_country" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>